# zotero-daily-read

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  test.yml
config/: base.yaml  custom.yaml  default.yaml
data/: review_log.json
src/zotero_daily_read/: construct_email.py  executor.py  main.py  protocol.py  selector.py  summarizer.py  utils.py
src/zotero_daily_read/retriever/: __init__.py  zotero_retriever.py
