[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "zotero-daily-read"
version = "1.0.0"
description = "Daily AI-powered deep reading reminder from your Zotero library"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "pyzotero>=1.10.0",
    "openai>=2.24.0",
    "tiktoken>=0.8.0",
    "pymupdf4llm>=0.3.4",
    "pymupdf-layout>=1.27.1",
    "trafilatura>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that are slow (e.g. download models)",
]
